# local-knowledge-cli

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  setup.sh
.claude/: CLAUDE.md  lk-instructions.md
.claude/skills/: save-context.md
.github/workflows/: release.yml  test.yml
.knowledge/: README.md  exported-claude.md  lk-instructions.md
.knowledge/architecture/: data-flow.md  module-structure.md
.knowledge/conventions/: error-handling.md  testing.md
.knowledge/features/: database-schema.md  embedded-commands.md  init-workflow.md  keyword-extraction.md  self-update.md
.knowledge/infrastructure/: ci-cd.md
commands/: lk-knowledge-add-db.md  lk-knowledge-discover.md  lk-knowledge-export.md  lk-knowledge-from-branch.md  lk-knowledge-refresh.md  lk-knowledge-save-context.md  lk-knowledge-write-md.md  ~lk-knowledge-add-db.md  ~lk-knowledge-discover.md  ~lk-knowledge-refresh.md  ~lk-knowledge-search.md  ~lk-knowledge-sync.md  ~lk-knowledge-write.md
examples/.knowledge/architecture/: sample.md
src/: config.rs  db.rs  keywords.rs  main.rs  markdown.rs  mcp.rs  secrets.rs  util.rs
src/cmd/: add.rs  entry.rs  export.rs  init.rs  install_mcp.rs  list.rs  mod.rs  search.rs  stats.rs  sync.rs  uninstall.rs  update.rs
tests/: integration_test.rs
