[package]
name = "lk"
version = "0.10.3"
edition = "2024"
description = "Local knowledge base CLI for Claude Code"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled", "modern_sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
regex = "1"
hex = "0.4"
time = { version = "0.3", features = ["local-offset", "formatting"] }
tempfile = "3"

[profile.release]
strip = true
lto = true
